Use seperate core for display Added schematic

--- a/platformio.ini
+++ b/platformio.ini
@@ -83,7 +83,7 @@ build_flags =
 ; Backlight turn on and uses a pin
   -D CONFIG_LV_ENABLE_BACKLIGHT_CONTROL=1
   -D CONFIG_LV_BACKLIGHT_ACTIVE_LVL=1
-; Dispplay 19 not used?
+; Display 19 not used?
   -D CONFIG_LV_DISP_SPI_MISO=19
   -D CONFIG_LV_DISP_SPI_MOSI=23
   -D CONFIG_LV_DISP_SPI_CLK=18
