--- a/platformio.ini
+++ b/platformio.ini
@@ -96,21 +96,25 @@ build_flags =
   -D CONFIG_LV_TOUCH_SPI_MOSI=23
   -D CONFIG_LV_TOUCH_SPI_CLK=18
   -D CONFIG_LV_TOUCH_SPI_CS=15
-  -D CONFIG_LV_TOUCH_PIN_IRQ=26
+; was 26
+  -D CONFIG_LV_TOUCH_PIN_IRQ=27
 ; Periferal sensors SPI2/HSPI (Temp/Touch) sensor
   -D CONFIG_PERI_PIN_SPI_MISO=12
 ;  -D CONFIG_PERI_PIN_SPI_MOSI=13
   -D CONFIG_PERI_PIN_SPI_CLK=14
 ; Temperature sensor CS uses SPI from periferal
-  -D CONFIG_BREW_PIN_SPI_CS=27
+; was 27
+  -D CONFIG_BREW_PIN_SPI_CS=26
   -D CONFIG_STEAM_PIN_SPI_CS=22
 ; SSR Control
   -D CONFIG_SSR_VALVE_PIN=25
   -D CONFIG_SSR_BOILER_PIN=33
   -D CONFIG_SSR_PUMP_PIN=32
 ; Front Buttons
-  -D CONFIG_STEAM_BUTTON_PIN=34
-  -D CONFIG_BREW_BUTTON_PIN=35
+; 34
+  -D CONFIG_STEAM_BUTTON_PIN=17
+; 35
+  -D CONFIG_BREW_BUTTON_PIN=16
 lib_deps =
     ${env.lib_deps}
     ${gaggia_env.lib_deps}
