Better naming, more accurate timing on display

--- a/platformio.ini
+++ b/platformio.ini
@@ -56,6 +56,7 @@ build_flags =
   -D SHOW_FREE_HEAP=0
   -D LV_LVGL_H_INCLUDE_SIMPLE=y
   -D CONFIG_IDF_TARGET_ESP32=y
+  -D CONFIG_LV_USE_PERF_MONITOR=0
   -D CONFIG_LV_PREDEFINED_DISPLAY_NONE=y
   -D CONFIG_LV_DISPLAY_ORIENTATION=0
   -D CONFIG_LV_DISPLAY_WIDTH=240
@@ -72,8 +73,8 @@ build_flags =
   -D CONFIG_LV_TFT_DISPLAY_CONTROLLER_ILI9341=y
   -D CONFIG_LV_TOUCH_CONTROLLER_XPT2046=y
   -D CONFIG_LV_TOUCH_CONTROLLER=1
-  -D CONFIG_LV_TFT_USE_CUSTOM_SPI_CLK_DIVIDER=y
-  -D CONFIG_LV_TFT_CUSTOM_SPI_CLK_DIVIDER=2
+#  -D CONFIG_LV_TFT_USE_CUSTOM_SPI_CLK_DIVIDER=n
+#  -D CONFIG_LV_TFT_CUSTOM_SPI_CLK_DIVIDER=2
   -D CONFIG_LV_TOUCH_DRIVER_PROTOCOL_SPI=y
   -D CONFIG_LV_TFT_DISPLAY_PROTOCOL_SPI=y
   -D CONFIG_LV_TOUCH_CONTROLLER_SPI_VSPI=y
