--- a/platformio.ini
+++ b/platformio.ini
@@ -50,7 +50,7 @@ build_flags =
   -D SHOW_FREE_HEAP=0
   -D LV_LVGL_H_INCLUDE_SIMPLE=y
   -D CONFIG_IDF_TARGET_ESP32=y
-  -D CONFIG_LV_USE_PERF_MONITOR=0
+;  -D CONFIG_LV_USE_PERF_MONITOR=y
   -D CONFIG_LV_PREDEFINED_DISPLAY_NONE=y
   -D CONFIG_LV_DISPLAY_ORIENTATION=0
   -D CONFIG_LV_DISPLAY_WIDTH=240
