Beta release of a working version

--- a/data/gaggiaCfg.conf
+++ b/data/gaggiaCfg.conf
@@ -1,4 +1,4 @@
 defaultBrewTemp=F94
 defaultSteamTemp=F145
-menuConfig=SCappuccino,A.Coffee,^,Standby
-powerSaveTemp=F70
+menuConfig=SCappuccino,A.Coffee,^,Standby,P.Down,^,Purge
+powerSaveTemp=F50
