--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ lib_deps =
   ;https://github.com/prampec/IotWebConf
   bblanchon/StreamUtils @ ^1.6.0
   https://github.com/RobTillaart/MAX31855_RT
-  lvgl
+  lvgl/lvgl@7.11.0
 
 [env:gaggia]
 platform = espressif32
@@ -45,8 +45,13 @@ build_flags =
   ;!python -c "import platform; print('-m32' if platform.system() in [ 'Linux' ] else '')"
   ; Add recursive dirs for hal headers search
   ;!python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
+
+; Visual LEDS on screen to see what the machine is doing, handle for testing..
   -D GUI_IO=y
-  -D DONT_WAIT_FOR_TEMPS=y
+; Active buttons (on the led) for brew/steam.. Handly for debugging
+;  -D GUI_BUTTONS=y
+; When set, we do not wait for temperatures, handle for debugging scripts where you want to keep the machine cold
+;  -D DONT_WAIT_FOR_TEMPS=y
   -D SHOW_FREE_HEAP=0
   -D LV_LVGL_H_INCLUDE_SIMPLE=y
   -D CONFIG_IDF_TARGET_ESP32=y
@@ -106,10 +111,10 @@ build_flags =
   -D CONFIG_SSR_BOILER_PIN=33
   -D CONFIG_SSR_PUMP_PIN=32
 ; Front Buttons
-; 34
   -D CONFIG_STEAM_BUTTON_PIN=17
-; 35
   -D CONFIG_BREW_BUTTON_PIN=16
+  -D CONFIG_MILLIS_INCLUDE=\'<Arduino.h>\'
+  -D CONFIG_MILLIS_TIME_EXPR=\'millis()\'
 lib_deps =
     ${gaggia_env.lib_deps}
 lib_ignore =
