Hotter default brew temperature

--- a/data/gaggiaCfg.conf
+++ b/data/gaggiaCfg.conf
@@ -1,4 +1,4 @@
-defaultBrewTemp=F94
+defaultBrewTemp=F105
 defaultSteamTemp=F145
-menuConfig=SCappuccino,A.Coffee,^,Standby,P.Down,^,Purge
+menuConfig=SCappuccino,A.Coffee,^,Cold Purge,Hot Purge
 powerSaveTemp=F50
