'Fix' weird UI slowdown New background

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,6 +52,7 @@ build_flags =
 ;  -D GUI_BUTTONS=y
 ; When set, we do not wait for temperatures, handle for debugging scripts where you want to keep the machine cold
 ;  -D DONT_WAIT_FOR_TEMPS=y
+  -D DISPLAY_TASK_IN_MAIN_LOOP=y
   -D SHOW_FREE_HEAP=0
   -D LV_LVGL_H_INCLUDE_SIMPLE=y
   -D CONFIG_IDF_TARGET_ESP32=y
