--- a/platformio.ini
+++ b/platformio.ini
@@ -47,13 +47,14 @@ build_flags =
   ;!python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
 
 ; Visual LEDS on screen to see what the machine is doing, handle for testing..
-  -D GUI_IO=y
+;  -D GUI_IO=y
 ; Active buttons (on the led) for brew/steam.. Handly for debugging
 ;  -D GUI_BUTTONS=y
 ; When set, we do not wait for temperatures, handle for debugging scripts where you want to keep the machine cold
 ;  -D DONT_WAIT_FOR_TEMPS=y
+; Due to a weird bug we cannot run the display UI tasks on core 0 well, when enabling this we run the display task on the main loop
   -D DISPLAY_TASK_IN_MAIN_LOOP=y
-  -D SHOW_FREE_HEAP=0
+;  -D SHOW_FREE_HEAP=y
   -D LV_LVGL_H_INCLUDE_SIMPLE=y
   -D CONFIG_IDF_TARGET_ESP32=y
 ;  -D CONFIG_LV_USE_PERF_MONITOR=y
