Limits to temperature (0..160) Scripting namins Verify max script file size

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,6 +52,7 @@ build_flags =
 ;  -D GUI_BUTTONS=y
 ; When set, we do not wait for temperatures, handle for debugging scripts where you want to keep the machine cold
 ;  -D DONT_WAIT_FOR_TEMPS=y
+  -D MAX_SCRIPT_SIZE=768
 ; Due to a weird bug we cannot run the display UI tasks on core 0 well, when enabling this we run the display task on the main loop
   -D DISPLAY_TASK_IN_MAIN_LOOP=y
 ;  -D SHOW_FREE_HEAP=y
