--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,7 @@ board_build.partitions = min_spiffs.csv
 upload_resetmethod = nodemcu
 #upload_protocol = espota
 board_build.flash_mode = dout
-build_type = debug
+#build_type = debug
 upload_speed = 115200 
 build_flags =
   -D LV_CONF_INCLUDE_SIMPLE
