Added watchdog to ensure heating loops will always work. Added option for PID controller Changes some of the menu's so they work more logical. CHanged fuzzy controller by making it simpler. Not very happy yet.... It works though! Added option for thee brewing.

--- a/data/gaggiaCfg.conf
+++ b/data/gaggiaCfg.conf
@@ -1,4 +1,5 @@
-defaultBrewTemp=F105
+defaultBrewTemp=F110
 defaultSteamTemp=F145
-menuConfig=SCappuccino,A.Coffee,^,Cold Purge,Hot Purge
+menuConfig=SCappuccino,A.Coffee,^,Cold Purge,Hot Purge,^,Thee
 powerSaveTemp=F50
+controller=SPID
