--- a/native/platformio.ini
+++ b/native/platformio.ini
@@ -55,6 +55,7 @@ build_flags =
   -D USE_MOUSEWHEEL
   -D USE_KEYBOARD
 lib_archive = false
+build_type = debug
 lib_deps =
   ${env.lib_deps}
   lv_drivers
