--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ lib_deps =
   bblanchon/StreamUtils @ ^1.6.0
   https://github.com/RobTillaart/MAX31855_RT
   lvgl/lvgl@7.11.0
+  br3ttb/PID @ ^1.2.1
 
 [env:gaggia]
 platform = espressif32
