--- a/data/gaggiaCfg.conf
+++ b/data/gaggiaCfg.conf
@@ -1,5 +1,6 @@
 defaultBrewTemp=F110
 defaultSteamTemp=F145
-menuConfig=SCappuccino,A.Coffee,^,Cold Purge,Hot Purge,^,Thee
+menuConfig=SCappuccino,A.Coffee,^,Cold Purge,Hot Purge,^,Thee,Clean
 powerSaveTemp=F50
+standByTemp=F95
 controller=SPID
