--- a/platformio.ini
+++ b/platformio.ini
@@ -82,6 +82,7 @@ build_flags =
   -D CONFIG_LV_TFT_DISPLAY_PROTOCOL_SPI=y
   -D CONFIG_LV_TOUCH_CONTROLLER_SPI_VSPI=y
   -D CONFIG_LV_TFT_DISPLAY_SPI_VSPI=Y
+#  -D CONFIG_LV_TOUCH_DETECT_IRQ=1
   -D CONFIG_LV_TOUCH_DETECT_IRQ_PRESSURE=1
   -D CONFIG_LV_TOUCH_DETECT_PRESSURE=1
 ; Backlight turn on and uses a pin
